--- a/index1.html
+++ b/index1.html
@@ -16,6 +16,12 @@
             <h2>Lorem ipsum dolor sit amet.</h2>
             <h3>Lorem ipsum dolor sit amet consectetur.</h3>
         </section>
+        <section>
+            <h4 class="text-5xl">This is a large text</h4>
+            <h4 class="text-3xl">This is medium Text</h4>
+            <h1 class="text-6xl">Very very big</h1>
+            <p class="font-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet doloremque blanditiis nemo vitae? Dignissimos ad mollitia libero nemo delectus asperiores!</p>
+        </section>
     </main>
 </body>
 </html>
