--- a/index1.html
+++ b/index1.html
@@ -17,10 +17,18 @@
             <h3>Lorem ipsum dolor sit amet consectetur.</h3>
         </section>
         <section>
-            <h4 class="text-5xl">This is a large text</h4>
+            <h4 class="text-5xl text-center bg-orange-500 text-red font-bold >This is a large text</h4>
             <h4 class="text-3xl">This is medium Text</h4>
             <h1 class="text-6xl">Very very big</h1>
             <p class="font-bold">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eveniet doloremque blanditiis nemo vitae? Dignissimos ad mollitia libero nemo delectus asperiores!</p>
+            <p class="text-blue-500 font-bold text-center">Blue text</p>
+        </section>
+        <section class="w-2/6 h-40 border
+        border-blue-600 border-8
+        mx-auto p-12
+        overflow overflow-scroll ">
+            <h1>About us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aliquid, temporibus, voluptates rem, consectetur cupiditate at omnis dolorem voluptatibus recusandae veniam nam dolore aspernatur excepturi? Molestias quos eligendi nam sequi, temporibus perspiciatis dignissimos doloremque cupiditate libero eaque. Qui dignissimos temporibus provident soluta. Totam nisi ullam et itaque autem deserunt odit, cum rerum iure dicta fuga enim assumenda velit veniam architecto ut sit nostrum, perspiciatis impedit reiciendis. Dicta animi repudiandae quidem quasi maiores? Reprehenderit consectetur unde, impedit tempora vero culpa aliquam debitis! Blanditiis, optio. Earum quod consequuntur optio, architecto porro fuga sapiente praesentium itaque quo totam mollitia illo nihil cupiditate iure?</p>
         </section>
     </main>
 </body>
