--- a/panda-mart/index.html
+++ b/panda-mart/index.html
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="bg-red-500 flex place-content-between h-10 place-items-center max-w">
+    <header class=" flex place-content-between h-10 place-items-center max-w">
         <img src="images/logo.png" alt="">
        
         <nav class="overflow-hidden..">
@@ -21,15 +21,15 @@
         </nav>
     </header>
     <main>
-      <section class="flex place-content-around h-80 w-180 m-auto border">
-        <div class="h-60 w-60 bg-background: rgb(254, 234, 233)">
-            <h1 class="text-6xl uppercase">Mi LED TV 4A PRO 32</h1>
+      <section class="bg-[#FEEAE9] h-100 w-90" >
+        <div class="">
+            <h1 class="">Mi LED TV 4A PRO 32</h1>
             <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             <h1>$1289</h1>
             <button>BUY NOW</button>
 
         </div>
-        <div class="h-60 w-60 border border-green">
+        <div class="">
             <img class="max-w" src="images/banner-images/tv.png" alt="">
         </div>
       </section> 
