--- a/daisyui-text/index.html
+++ b/daisyui-text/index.html
@@ -212,8 +212,12 @@
   <div class="radial-progress" style="--value:30;" aria-valuenow="30" role="progressbar">30%</div>
 
   <br>
-  
-<calendar-date class="cally bg-base-100 border border-base-300 shadow-lg rounded-box">
+  <div class="flex w-full flex-col">
+   
+    <div class="divider">OR</div>
+   
+  </div>
+<calendar-date class="cally bg-base-100 border border-base-300 shadow-lg rounded-box place-items-center">
     <svg aria-label="Previous" class="fill-current size-4" slot="previous" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M15.75 19.5 8.25 12l7.5-7.5"></path></svg>
     <svg aria-label="Next" class="fill-current size-4" slot="next" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="m8.25 4.5 7.5 7.5-7.5 7.5"></path></svg>
     <calendar-month></calendar-month>
